# pico-template

./: .gitignore  CMakeLists.txt  README.md  main.c
